Fixes missing padding on excluded files in search view component

--- a/visualization/app/codeCharta/ui/blacklistPanel/blacklistPanel.component.scss
+++ b/visualization/app/codeCharta/ui/blacklistPanel/blacklistPanel.component.scss
@@ -23,7 +23,7 @@ blacklist-panel-component {
 	}
 
 	.pattern-text {
-		direction: rtl;
+		direction: ltr;
 		overflow: hidden;
 		width: 100%;
 		padding-right: 10px;
